Was created constructor function for PriorityForm, which must contains one of two priority type as argument. Constructor unites inner elements for forms, the corresponding task list element and added for them some methods. Constructor methods:     for inner text element:         built-in listeners:             - for resize form after input text;             - for correct submit form (by pressing "enter") and line break (by pressing "ShiftLeft + Enter");
        getHtmlText method (to get html text with correct line breaks (<br> tags));
        textResize method (to put correct size in style.height);
        resetText method;

    for linked task list element:
        append method (to put task object on list element);

    for form element:
        addPriorityFormListener (to add the listener for form element)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ body {
 
 .task-form {
   width: 460px;
-  height: 45px;
+  min-height: 45px;
 
   background-color: #A1ACEE;
   border: 1px solid #989898;
@@ -45,7 +45,13 @@ body {
 
   &__text {
     width: 350px;
+    height: 20px;
     background-color: inherit;
+    line-height: 20px;
+
+    overflow-wrap: break-word;
+    overflow: hidden;
+    resize: none;
     &::placeholder {
       color: #FFFFFF;
     }
@@ -72,9 +78,12 @@ body {
 
   &__text {
     width: 360px;
+    height: auto;
     margin: 0 18px 0 12px;
 
     overflow-wrap: break-word;
+    overflow: auto;
+    //overflow-wrap: ;
   }
 
   &:last-child {
